# flightops

./: .env.example  .gitignore  Agents.md  DEPLOYMENT_GUIDE.md  GEMINI.md  LLMUse.md  LLM_MESSAGE_TRACKING.md  PROMPTS.md  QUICK_DEPLOY.md  README.md  SCALABLE_CHATBOT_SUMMARY.md  SOLO_DEMO_SCRIPT.md  UserTesting.md  VIDEO_INTERVIEW_SCRIPT.md  deploy-digitalocean.sh  enhancements.md  pyproject.toml  railway.json  render.yaml  setup.py  start-production.sh  usecase.md
data/csv/: aircraft_status.csv  bookings.csv  crew_details.csv  crew_roster.csv  flights.csv
data/docs/: 01_checkin.md  02_baggage_allowance.md  03_excess_fees.md  04_dangerous_goods.md  05_fare_rules.md  06_rebooking_delay.md  07_travel_credits.md  08_special_assistance.md  09_pets.md  10_contact_channels.md  11_loyalty_basics.md  12_airport_cutoffs.md  13_customer_questions.md  14_policy_customer_compensation.md  16_sop_irrops.md  17_templates_comms.md  customer_questions.md  policy_refunds_care.md
data/kaggle/: Airline_Delay_Cause.csv
docs/: ARCHITECTURE_REDESIGN.md  LLMUse.md  LLM_MESSAGE_TRACKING.md  PROMPTS.md  UserTesting.md  enhancements.md  questions.md  usecase.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/prometheus/: prometheus.yml
services/agent-svc/: Dockerfile  main.py  requirements.txt  utils.py
services/comms-svc/: Dockerfile  main.py  requirements.txt
services/crew-svc/: Dockerfile  main.py  requirements.txt  utils.py
services/customer-chat-svc/: Dockerfile  conversation_logic.py  main.py  requirements.txt
services/db-router-svc/: Dockerfile  README.md  (+6 more)
(+146 files in other folders)
