[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightops"
version = "1.0.0"
description = "FlightOps - Airline Operations Management System"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "psycopg[binary,pool]==3.2.1",
    "prometheus-client==0.20.0",
    "loguru==0.7.2",
    "openai==1.40.3",
    "tiktoken==0.7.0",
]

[tool.setuptools.packages.find]
where = ["services"]
include = ["shared*"]

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N999"]

[tool.ruff.isort]
known-first-party = ["services"]
